# tdd_lab3

./: README.md  pyproject.toml
src/company/: __init__.py  api.py  model.py  service.py
tests/: test_company.py  test_company_service.py
