[tool.poetry]
name = "tdd-lab3"
version = "0.1.0"
description = ""
authors = ["Andrii <tap.press.swap@gmail.com>"]
packages = [
    { include = "company", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
